Rethink-Patient-Api/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: accounts
  namespace: apps
  labels:
    app: accounts
  #annotations:
  #  deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        aadpodidbinding: accounts
        app: accounts
      #annotations:
      #  sumologic.com/sourceCategory: deployment
      #  sumologic.com/sourceName: accounts
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: true
      containers:
       - name: accounts
         image: rethinkfirst.azurecr.io/rethinkbh/accounts:latest # rethinkbh/accounts:latest
         ports:
         - containerPort: 8080
           protocol: TCP
         resources: {}
         imagePullPolicy: Always
         #env: 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
