Rethink-Patient-Api/manifests/ingress-private.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: accounts-private
  namespace: apps
  labels:
    app: accounts
spec:
  ingressClassName: nginx-private
  rules:
    - host: accounts.eng.rethinkbehavioralhealth.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: accounts
                port:
                  number: 80
